LatestRates demo page

--- a/src/Tor.Currency.Fixer.Io.Client.BlazorDemo/Pages/Symbols.razor
+++ b/src/Tor.Currency.Fixer.Io.Client.BlazorDemo/Pages/Symbols.razor
@@ -2,9 +2,9 @@
 
 <h1>Symbols</h1>
 
-<button type="button" class="btn btn-primary" @onclick="LoadSymbols">Load symbols</button>
+<button type="button" class="btn btn-primary" @onclick="LoadData">Load</button>
 
-@if (hasSymbols)
+@if (hasData)
 {
     <table class="table">
         <thead>
