--- a/src/Tor.Currency.Fixer.Io.Client.BlazorDemo/Layout/NavMenu.razor
+++ b/src/Tor.Currency.Fixer.Io.Client.BlazorDemo/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
                 Symbols
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="latestrates">
+                Latest rates
+            </NavLink>
+        </div>
     </nav>
 </div>
 
