--- a/src/Tor.Currency.Fixer.Io.Client.BlazorDemo/Layout/NavMenu.razor
+++ b/src/Tor.Currency.Fixer.Io.Client.BlazorDemo/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 Latest rates
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="historicalrates">
+                Historical rates
+            </NavLink>
+        </div>
     </nav>
 </div>
 
