--- a/src/Tor.Fixer.Client.BlazorDemo/Layout/NavMenu.razor
+++ b/src/Tor.Fixer.Client.BlazorDemo/Layout/NavMenu.razor
@@ -29,6 +29,11 @@
                 Historical rates
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="convert">
+                Convert
+            </NavLink>
+        </div>
     </nav>
 </div>
 
