Add TimeSeries page to Demo app

--- a/src/Tor.Fixer.Client.BlazorDemo/Layout/NavMenu.razor
+++ b/src/Tor.Fixer.Client.BlazorDemo/Layout/NavMenu.razor
@@ -34,6 +34,11 @@
                 Convert
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="timeseries">
+                Time-Series
+            </NavLink>
+        </div>
     </nav>
 </div>
 
