--- a/src/Tor.Fixer.Client.BlazorDemo/Layout/NavMenu.razor
+++ b/src/Tor.Fixer.Client.BlazorDemo/Layout/NavMenu.razor
@@ -39,6 +39,11 @@
                 Time-Series
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="fluctuation">
+                Fluctuation
+            </NavLink>
+        </div>
     </nav>
 </div>
 
